[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casa_cube"
version = "0.1.0"
description = "Package to plot data cube from CASA in Python"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT"}
authors = [
    {name = "Christophe Pinte", email = "christophe.pinte@univ-grenoble-alpes.fr"}
]
keywords = ["astronomy", "CASA", "data-cube", "visualization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
]

[project.urls]
Homepage = "http://github.com/cpinte/casa_cube"
Repository = "http://github.com/cpinte/casa_cube.git"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["casa_cube"] 